use font-display to avoid invisible words

--- a/static/css/font-roboto.css
+++ b/static/css/font-roboto.css
@@ -1,6 +1,7 @@
 /* roboto-100 - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: normal;
   font-weight: 100;
   src: url('/fonts/roboto/roboto-v18-latin-100.eot'); /* IE9 Compat Modes */
@@ -14,6 +15,7 @@
 /* roboto-100italic - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: italic;
   font-weight: 100;
   src: url('/fonts/roboto/roboto-v18-latin-100italic.eot'); /* IE9 Compat Modes */
@@ -27,6 +29,7 @@
 /* roboto-300 - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: normal;
   font-weight: 300;
   src: url('/fonts/roboto/roboto-v18-latin-300.eot'); /* IE9 Compat Modes */
@@ -40,6 +43,7 @@
 /* roboto-300italic - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: italic;
   font-weight: 300;
   src: url('/fonts/roboto/roboto-v18-latin-300italic.eot'); /* IE9 Compat Modes */
@@ -53,6 +57,7 @@
 /* roboto-regular - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: normal;
   font-weight: 400;
   src: url('/fonts/roboto/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
@@ -66,6 +71,7 @@
 /* roboto-italic - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: italic;
   font-weight: 400;
   src: url('/fonts/roboto/roboto-v18-latin-italic.eot'); /* IE9 Compat Modes */
@@ -79,6 +85,7 @@
 /* roboto-500 - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: normal;
   font-weight: 500;
   src: url('/fonts/roboto/roboto-v18-latin-500.eot'); /* IE9 Compat Modes */
@@ -92,6 +99,7 @@
 /* roboto-500italic - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: italic;
   font-weight: 500;
   src: url('/fonts/roboto/roboto-v18-latin-500italic.eot'); /* IE9 Compat Modes */
@@ -105,6 +113,7 @@
 /* roboto-700 - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: normal;
   font-weight: 700;
   src: url('/fonts/roboto/roboto-v18-latin-700.eot'); /* IE9 Compat Modes */
@@ -118,6 +127,7 @@
 /* roboto-700italic - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: italic;
   font-weight: 700;
   src: url('/fonts/roboto/roboto-v18-latin-700italic.eot'); /* IE9 Compat Modes */
@@ -131,6 +141,7 @@
 /* roboto-900 - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: normal;
   font-weight: 900;
   src: url('/fonts/roboto/roboto-v18-latin-900.eot'); /* IE9 Compat Modes */
@@ -144,6 +155,7 @@
 /* roboto-900italic - latin */
 @font-face {
   font-family: 'Roboto';
+  font-display: auto;
   font-style: italic;
   font-weight: 900;
   src: url('/fonts/roboto/roboto-v18-latin-900italic.eot'); /* IE9 Compat Modes */
